# Mill

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  ShaderProgram.cpp  ShaderProgram.h  Timer.cpp  Timer.h  Window.cpp  Window.h  main.cpp
objects/: BasicObject.cpp  BasicObject.h  Camera.cpp  Camera.h  CameraMovement.h  ColoredCube.cpp  ColoredCube.h  Cube.cpp  Cube.h  Light.cpp  Light.h  Plane.cpp  Plane.h  Skybox.cpp  Skybox.h
shaders/: color.frag  color.vert  shader.frag  shader.vert
shaders/cpp/: BasicShader.cpp  BasicShader.h
shaders/glsl/: color.frag  color.vert  light.frag  light.vert  shader.frag
